View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024242 | Open CASCADE | OCCT:Modeling Algorithms | public | 2013-10-09 11:44 | 2013-12-19 13:58 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.7.0 | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024242: Hang-up during classification a 3D point relative to a solid | ||||
Description | Hang-up during classification a 3D point relative to a solid. The bug is blocked one for the OCC bug: http://tracker.dev.opencascade.org/view.php?id=24157 | ||||
Steps To Reproduce | Use the following commands to reproduce the problem: # restore sx b1 point p 14.3213918 20. 20. bclassify b1 p | ||||
Additional information and documentation updates | I. New features: no new features II. Changes: II.1. class BRepClass3d - method: Standard_Integer BRepClass3d_SolidExplorer::OtherSegment(const gp_Pnt& P, gp_Lin& L, Standard_Real& _Par) The condition to prevent infinite loop has been added. III. Modified entities: packages: BRepClass3d | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_5 bug24242 | ||||
2013-10-09 11:45 developer |
sx (1,128 bytes) |
|
The branch CR24242 is ready to be reviewed. |
|
Ok |
|
Dear BugMaster, Branch CR24242 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 9e589761173ac7d3f893b0f10a01efed21dfb203 Number of compiler warnings: occt component : Linux: 370 (370 on master) Windows: 6 (6 on master) products component : Linux: 191 (191 on master) Windows: 287 (287 on master) Regressions: No regressions Improvements: No improvements Testing cases: bugs modalg_5 bug24242 - OK Testing on Linux: Total MEMORY difference: 353313016 / 353462608 Total CPU difference: 40105.33000000065 / 43493.85000000097 Testing on Windows: Total MEMORY difference: 407079532 / 411331804 Total CPU difference: 32729.328125 / 37715.984375 There are not differences in images found by testdiff. |
occt: master 1da5279e 2013-10-17 08:19:24
Committer: bugmaster Details Diff |
0024242: Hang-up during classification a 3D point relative to a solid v0.0 I. New features: no new features II. Changes: II.1. class BRepClass3d - method: Standard_Integer BRepClass3d_SolidExplorer::OtherSegment(const gp_Pnt& P, gp_Lin& L, Standard_Real& _Par) The condition to prevent infinite loop has been added. III. Modified entities: packages: BRepClass3d Added test case bugs/modalg_5/bug24242 |
Affected Issues 0024242 |
|
mod - src/BRepClass3d/BRepClass3d_SolidExplorer.cxx | Diff File | ||
add - tests/bugs/modalg_5/bug24242 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-10-09 11:44 |
|
New Issue | |
2013-10-09 11:44 |
|
Assigned To | => pkv |
2013-10-09 11:45 |
|
File Added: sx | |
2013-10-09 11:46 |
|
Status | new => assigned |
2013-10-09 11:47 |
|
Relationship added | child of 0024157 |
2013-10-09 13:35 | bugmaster | Project | Salome => Open CASCADE |
2013-10-11 09:58 |
|
Additional Information Updated | |
2013-10-11 09:59 |
|
Status | assigned => resolved |
2013-10-11 09:59 |
|
Note Added: 0026039 | |
2013-10-11 10:00 |
|
Assigned To | pkv => ifv |
2013-10-11 10:50 |
|
Note Added: 0026041 | |
2013-10-11 10:50 |
|
Status | resolved => reviewed |
2013-10-11 13:07 |
|
Assigned To | ifv => mkv |
2013-10-15 12:35 | apn | Note Added: 0026087 | |
2013-10-15 12:35 | apn | Test case number | => bugs modalg_5 bug24242 |
2013-10-15 12:35 | apn | Assigned To | mkv => bugmaster |
2013-10-15 12:35 | apn | Status | reviewed => tested |
2013-10-18 13:47 | bugmaster | Changeset attached | => occt master 1da5279e |
2013-10-18 13:47 | bugmaster | Status | tested => verified |
2013-10-18 13:47 | bugmaster | Resolution | open => fixed |
2013-12-19 13:51 | bugmaster | Status | verified => closed |
2013-12-19 13:58 | bugmaster | Fixed in Version | => 6.7.0 |